<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.astuetz.PagerSlidingTabStrip
                android:layout_width="match_parent"
                android:layout_height="@dimen/pagerSlidingTabStripSize"
                android:id="@+id/detailPagerSlidingTabStrip"
                android:layout_alignParentTop="true"/>

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/detailViewPage"
                android:layout_below="@+id/detailPagerSlidingTabStrip"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:id="@+id/detailHeroName"
                android:textColor="@color/detailHeroName"
                android:layout_below="@id/detailPagerSlidingTabStrip"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailPositioning"
                android:textColor="@color/detailCoverName"
                android:textSize="@dimen/abilitiesTextSize"
                android:layout_below="@id/detailHeroName"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/abilitiesBar"
            android:background="@color/detailAbilitiesBackground"
            android:alpha="0.7"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/abilitiesTextSize"
                    android:textColor="@color/detailAbilitiesSurviveColor"
                    android:layout_marginStart="@dimen/abilities_margin_start"
                    android:id="@+id/detailAbilitiesSurvive"
                    android:text="@string/abilitiesItem1" />

                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:layout_marginStart="@dimen/donut_margin_start"
                    android:id="@+id/donutSurviveProgress"
                    android:layout_width="@dimen/abilitiesHeightSize"
                    android:layout_height="@dimen/abilitiesHeightSize"
                    custom:donut_text_size="@dimen/abilitiesTextSize"
                    custom:donut_circle_starting_degree="-90"
                    custom:donut_finished_stroke_width="@dimen/donut_width_height_size"
                    custom:donut_finished_color="@color/detailAbilitiesSurviveColor"
                    custom:donut_unfinished_stroke_width="@dimen/donut_width_height_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/abilitiesTextSize"
                    android:textColor="@color/detailAbilitiesAttackColor"
                    android:layout_marginStart="@dimen/abilities_margin_start"
                    android:id="@+id/detailAbilitiesAttack"
                    android:text="@string/abilitiesItem2" />

                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:layout_marginStart="@dimen/donut_margin_start"
                    android:id="@+id/donutAttackProgress"
                    android:layout_width="@dimen/abilitiesHeightSize"
                    android:layout_height="@dimen/abilitiesHeightSize"
                    custom:donut_text_size="@dimen/abilitiesTextSize"
                    custom:donut_circle_starting_degree="-90"
                    custom:donut_finished_stroke_width="@dimen/donut_width_height_size"
                    custom:donut_finished_color="@color/detailAbilitiesAttackColor"
                    custom:donut_unfinished_stroke_width="@dimen/donut_width_height_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/abilitiesTextSize"
                    android:textColor="@color/detailAbilitiesSkillColor"
                    android:layout_marginStart="@dimen/abilities_margin_start"
                    android:id="@+id/detailAbilitiesSkill"
                    android:text="@string/abilitiesItem3" />
                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:layout_marginStart="@dimen/donut_margin_start"
                    android:id="@+id/donutSkillProgress"
                    android:layout_width="@dimen/abilitiesHeightSize"
                    android:layout_height="@dimen/abilitiesHeightSize"
                    custom:donut_text_size="@dimen/abilitiesTextSize"
                    custom:donut_circle_starting_degree="-90"
                    custom:donut_finished_stroke_width="@dimen/donut_width_height_size"
                    custom:donut_finished_color="@color/detailAbilitiesSkillColor"
                    custom:donut_unfinished_stroke_width="@dimen/donut_width_height_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/abilitiesTextSize"
                    android:textColor="@color/detailAbilitiesDifficultColor"
                    android:layout_marginStart="@dimen/abilities_margin_start"
                    android:id="@+id/detailAbilitiesDifficult"
                    android:text="@string/abilitiesItem4" />
                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:layout_marginStart="@dimen/donut_margin_start"
                    android:id="@+id/donutDifficultProgress"
                    android:layout_width="@dimen/abilitiesHeightSize"
                    android:layout_height="@dimen/abilitiesHeightSize"
                    custom:donut_text_size="@dimen/abilitiesTextSize"
                    custom:donut_circle_starting_degree="-90"
                    custom:donut_finished_stroke_width="@dimen/donut_width_height_size"
                    custom:donut_finished_color="@color/detailAbilitiesDifficultColor"
                    custom:donut_unfinished_stroke_width="@dimen/donut_width_height_size"/>

            </LinearLayout>
        </LinearLayout>

        <!--<com.example.liuyh73.glory.HorizontalListView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="100dp"-->
            <!--android:background="@color/HorizontalListViewBackground"-->
            <!--android:id="@+id/detailListView">-->

        <!--</com.example.liuyh73.glory.HorizontalListView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/border_line"
                android:textSize="@dimen/detailIntroduceSize"
                android:text="@string/detailSkillIntroduce"
                android:onClick="showSkills"
                android:id="@+id/detailAbilitiesSkillIntroduceText"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:onClick="showOutfit"
                android:id="@+id/detailOutfitSuggestionText"
                android:layout_weight="1"
                android:textSize="@dimen/detailIntroduceSize"
                android:text="@string/detailOutfitSuggestion"/>
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/horizontalScrollView"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/skillImage1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@mipmap/item2"
                    android:padding="10dp"
                    android:src="@mipmap/s50800"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/skillImage2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@mipmap/item1"
                    android:padding="10dp"
                    android:src="@mipmap/s50800"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/skillImage3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@mipmap/item1"
                    android:padding="10dp"
                    android:src="@mipmap/s50800"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/skillImage4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@mipmap/item1"
                    android:padding="10dp"
                    android:src="@mipmap/s50800"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailOutfitSuggestion"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:onClick="showOutfit1"
                    android:id="@+id/outfitSuggestion1"
                    android:background="@drawable/border_line"
                    android:text="@string/detailOutfitSuggestion1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:onClick="showOutfit2"
                    android:id="@+id/outfitSuggestion2"
                    android:layout_weight="1"
                    android:text="@string/detailOutfitSuggestion2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@mipmap/item2"
                    android:layout_marginStart="@dimen/detailSuggestionMargin"
                    android:layout_marginEnd="@dimen/detailSuggestionMargin"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/equip1"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@mipmap/s1422"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@mipmap/item2"
                    android:layout_marginStart="@dimen/detailSuggestionMargin"
                    android:layout_marginEnd="@dimen/detailSuggestionMargin"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/equip2"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@mipmap/s1422"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@mipmap/item2"
                    android:layout_marginStart="@dimen/detailSuggestionMargin"
                    android:layout_marginEnd="@dimen/detailSuggestionMargin"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/equip3"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@mipmap/s1422"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/detailSuggestionMargin"
                    android:layout_marginEnd="@dimen/detailSuggestionMargin"
                    android:background="@mipmap/item2"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/equip4"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@mipmap/s1422"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@mipmap/item2"
                    android:layout_marginStart="@dimen/detailSuggestionMargin"
                    android:layout_marginEnd="@dimen/detailSuggestionMargin"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/equip5"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@mipmap/s1422"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@mipmap/item2"
                    android:layout_marginStart="@dimen/detailSuggestionMargin"
                    android:layout_marginEnd="@dimen/detailSuggestionMargin"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/equip6"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@mipmap/s1422"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/introduceMarginTopSize"
            android:layout_marginStart="@dimen/introduceMarginHorizontalSize"
            android:layout_marginEnd="@dimen/introduceMarginHorizontalSize"
            android:id="@+id/detailIntroduce"/>
    </LinearLayout>
</ScrollView>
